erDiagram
AUTHOR ||--o{ COURSE : "has many"
COURSE ||--o{ COURSE_COMPETENCY : "has many"
COMPETENCY ||--o{ COURSE_COMPETENCY : "has many"

AUTHOR {
  integer id PK
  string name
}

COURSE {
  integer id PK
  string title
  text description
  integer author_id FK
}

COMPETENCY {
  integer id PK
  string name
}

COURSE_COMPETENCY {
  integer course_id FK
  integer competency_id FK
}
